--- a/index.html
+++ b/index.html
@@ -448,6 +448,66 @@
           <a href="/Tools/carloan-calc.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
+          <i class="fas fa-coins"></i>
+          <h2>Gold Loan Calculator</h2>
+          <p>Calculate your eligible loan amount on gold assets.</p>
+          <a href="/Tools/goldloan-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-balance-scale-left"></i>
+          <h2>Break Even Calculator</h2>
+          <p>Determine break-even points for your business.</p>
+          <a href="/Tools/breakeven-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-percentage"></i>
+          <h2>GST Calculator</h2>
+          <p>Calculate GST for inclusive or exclusive prices.</p>
+          <a href="/Tools/gst-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-chart-line"></i>
+          <h2>Profit Margin Calculator</h2>
+          <p>Find out gross and net profit margins easily.</p>
+          <a href="/Tools/profitmargin-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-chart-pie"></i>
+          <h2>ROI Calculator</h2>
+          <p>Evaluate your return on investment.</p>
+          <a href="/Tools/roi-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-landmark"></i>
+          <h2>ROE Calculator</h2>
+          <p>Calculate Return on Equity from net income and equity.</p>
+          <a href="/Tools/roe-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-project-diagram"></i>
+          <h2>NPV & IRR Calculator</h2>
+          <p>Analyze Net Present Value and Internal Rate of Return.</p>
+          <a href="/Tools/npvirr-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-calendar-check"></i>
+          <h2>Workdays Calculator</h2>
+          <p>Calculate number of workdays between two dates.</p>
+          <a href="/Tools/workdays-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-birthday-cake"></i>
+          <h2>Age Calculator</h2>
+          <p>Find out your exact age in years, months, days.</p>
+          <a href="/Tools/age-calc.html" class="btn">Use Tool</a>
+        </div>        
+        <div class="tool-card">
+          <i class="fas fa-hourglass-half"></i>
+          <h2>Countdown Calculator</h2>
+          <p>Start a countdown to your custom event date.</p>
+          <a href="/Tools/countdown-calc.html" class="btn">Use Tool</a>
+        </div>
+        <div class="tool-card">
           <i class="fas fa-file-archive"></i>
           <h2>File Converter</h2>
           <p>Convert files to various formats.</p>
