--- a/index.html
+++ b/index.html
@@ -684,11 +684,11 @@ const tools = [
     ]
   },
   {
-    "id": "pdfdecrypt",
+    "id": "pdf",
     "icon": "fas fa-file-pdf",
-    "title": "PDF Decrypt",
+    "title": "PDF ",
     "description": "Remove password protection from PDFs.",
-    "link": "/Tools/pdfdecrypt.html",
+    "link": "/Tools/pdf-decrypt.html",
     "category": "pdf",
     "color": "#4a90e2",
     "tags": [
